--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" >
     </head>
     <body>
-        <table border="1">
+        <table>
             <tr>
         <td colspan="4">
             <input type="text" id="inputBox" value="0" />
